--- a/Style/menu.css
+++ b/Style/menu.css
@@ -100,7 +100,9 @@
         width: 100%;
         height: 100%;
     }
-  
+    .navLogo :hover{
+      transform: scale(1.08);
+    }
     .burgerMenu {
         display: block;
     }
