--- a/Style/petitefaim.css
+++ b/Style/petitefaim.css
@@ -562,7 +562,7 @@ padding: 0;
   .h2Quatre {
     height: 5vh;
     margin-top: 2px;
-    margin-left: -45vw;
+    /* margin-left: -45vw; */
     width: 100vw;
     display: flex;
     justify-content: center;
