--- a/Style/accueil.css
+++ b/Style/accueil.css
@@ -3,7 +3,8 @@ body {
     margin: 0;
     padding: 0;
     /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
-
+    box-sizing: border-box;
+    overflow-x: hidden
   }
 
   .hidden {
@@ -219,7 +220,7 @@ body {
     width: 100%;
     height: 100vh;
   background-color: black;
-   overflow-y: hidden;
+   
 }
 
 .droite, .gauche {
@@ -325,7 +326,7 @@ text-align: center;
   body {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+   
 
   }
 footer{
@@ -446,7 +447,7 @@ footer{
   #map {
     width: 80vw;
     height: 250px;
-    margin-left: -5vw;
+    margin-left: -10vw;
   }
 
   .reseaux {
@@ -455,6 +456,7 @@ footer{
     justify-content: center;
     flex-direction: row;
     height: 20vh;
+    margin-left: -40px;
   }
 
   .reseaux img {
@@ -518,9 +520,10 @@ footer{
   .contact-info {
     text-align: center;
     margin-bottom: 20px;
-    font-size: 1.2em;
+    font-size: 1.4em;
     color: white;
-    width: 60vw;
+    width: 80vw;
+    margin-left: -5vw;
   }
 }
 
@@ -738,12 +741,12 @@ text-align: center;
 
 /* CODE POUR LE MENU */
 
-body{  overflow-x: hidden;}
+
 .navbar {
   display: flex;
   justify-content: space-between;
   background-color: #171816ae;
-  padding: 10px;
+  /* padding: 10px; */
   position: fixed;  
   top: 0;  
   width: 100vw;  
@@ -763,7 +766,7 @@ display: inline-block;
 
 .Le {
 
-padding: 14px 20px;
+/* padding: 14px 20px; */
 font-size: 16px;
 border: none;
 cursor: pointer;
@@ -774,7 +777,7 @@ text-decoration: none;
 display: none;
 position: absolute;
 background-color: rgba(0, 0, 0, 0.767);
-min-width: 160px;
+width: 15vw;
 box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.767);
 z-index: 1;
 color: white;
@@ -790,7 +793,7 @@ color: black;
 
 .menuDeroulant li{
 color: white;
-padding: 12px 16px;
+padding: 7px 13px;
 text-decoration: none;
 display: block;
 list-style-type: none;
@@ -810,7 +813,7 @@ width: 20px;
 top: 0;
 color: white;
 background-color: rgba(0, 0, 0, 0.767);
-min-width: 160px;
+min-width: 15vw;
 box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.767);
 }
 
@@ -875,10 +878,7 @@ display: block;
    /* RESPONSIVE BURGER */
 /* TÉLÉPHONE */
 @media screen and (max-width: 767px) {
-  body{
-    top: 0;
-    left: 0;
-  }
+  
   .navLogo {
       width: 40px;
       height: 40px;
@@ -887,12 +887,13 @@ display: block;
   
   .navbar{
     height: 40px;
-    width: 98vw;
+    width: 99vw;
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
     font-size: 1em;
-    top: 0;
+    right: 0;
+   
   }
 
 
@@ -911,11 +912,12 @@ display: block;
    .burger-menu img {
         height: 40px;
         width: 40px;
-        margin-right: 15px;
+        
     }
   .avatar img{
     height: 35px;
      width: 35px;
+     margin-left: 5vw;
   }
 
   .navMenu {
@@ -924,7 +926,9 @@ display: block;
   }
 
   .navMenu.active {
-      display: block
+      display: block;
+      right: 0;
+    
   }
 
   .menuDeroulant {
@@ -935,9 +939,10 @@ display: block;
       background-color: #171816ae; 
       height: 18vh;
       max-width: 100vw;
-      margin-top: 220px; 
+      margin-top: 224px; 
       right: 0;
       margin-right: -15vw;
+     
   }
 
 .menuDeroulant li {
@@ -947,6 +952,8 @@ display: block;
   display: block;
   list-style: none;
   font-size: 1em;
+  right: 0;
+ 
 }
 
 .soumenu{
@@ -958,6 +965,7 @@ display: block;
   width: 100vw;
   right: 0;
   margin-right: -15vw;
+  
 }
 .soumenu a, .submenu a{
   font-size: 1em!important;
@@ -985,12 +993,16 @@ display: block;
       display: flex;
       right: 0!important;
      margin-right: -20vw;
+     right: 0;
+    
   }
  .submenu:hover .deroulant,
   .submenu .deroulant.active {
       display: flex;
       right: 0!important;
       margin-right: -15vw;
+      right: 0;
+     
   }
   /* .navMenu li {
       width: 100%;
@@ -1019,7 +1031,7 @@ display: block;
 }
 .navbar{
   height: 40px;
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
