--- a/Style/accueil.css
+++ b/Style/accueil.css
@@ -370,7 +370,8 @@ footer{
     font-size: 2.4em;
     color: white;
     letter-spacing: 2px;
-    margin-top: 5vh;
+    margin-top: 15vh !important
+    ;
     
   }
  .navContacts{
@@ -894,8 +895,8 @@ display: block;
   .navLogo {
       width: 50px;
       height: 50px;
-      display: none;
-   
+      display: block;
+      margin-left: 44%;
   }
   
   .navbar{
@@ -913,6 +914,7 @@ display: block;
   .navLogo img {
       width: 100%;
       height: 100%;
+     
   }
 
   .burgerMenu {
