--- a/Style/accueil.css
+++ b/Style/accueil.css
@@ -327,7 +327,8 @@ text-align: center;
     font-size: 1.7em;
     height: 30vh;
     width: 40vw;
-    color: white;    
+    color: white;   
+
 }
 
 
@@ -342,7 +343,9 @@ text-align: center;
 footer{
   font-size: 10px;
 }
-
+p{
+  text-decoration: none; 
+}
   .backAcceuil {
     height: 100vh;
     width: 100vw;
@@ -896,7 +899,7 @@ display: block;
       width: 50px;
       height: 50px;
       display: block;
-      margin-left: 44%;
+      margin-right: 43%;
   }
   
   .navbar{
