--- a/Style/burger.css
+++ b/Style/burger.css
@@ -58,6 +58,7 @@ html, body {
     justify-content: flex-start; /* Alignement à gauche */
     align-items: center;
     margin-left: 20px; /* Ajustez la valeur pour votre besoin */
+   
   }
   
   .prix2 {
@@ -66,6 +67,7 @@ html, body {
     gap: 50px; /* Espace entre les options */
     align-items: center;
     margin-left: 13vw;
+    margin-top: 20vh;
   }
   
   .option {
@@ -78,15 +80,16 @@ html, body {
   
   .option span {
     font-size: 1.5em;
-    color: #5A7C2A; /* Ajustez la couleur pour correspondre au thème */
+    color:white; /* Ajustez la couleur pour correspondre au thème */
+    background-color: #C2402D;
   }
   
   .prix2 p {
     height: 70px;
     width: 70px;
     font-size: 1.4em;
-    background-color: #5A7C2A;
-    color: white;
+    background-color: WHITE;
+    color:#5A7C2A;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -98,13 +101,14 @@ html, body {
   .titresupp2 {
     width: 50vw;
     height: 100vh;
-   
+   margin-top: 5vh;
+  
   }
   
   .h2supp2{
     height: 20vh;
     width: 50vw;
-    color: #5A7C2A;
+    color: white;
     font-size: 1.8em;
     margin-top: 5vh;
   }
@@ -113,7 +117,7 @@ html, body {
     width: 35vw;
     margin-top: 10vh;
     margin-left: 7vw;
-  
+   /* background-color: rgba(0, 0, 0, 0.261); */
   }
   
   .suppléments2 img{
@@ -153,7 +157,7 @@ html, body {
     height: 100vh;
     width: 100vw;
     display: flex;
-    background-image: url(../img/burgersimpe.png);
+    background-image: url(../img/lesimple.png);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -186,7 +190,7 @@ html, body {
     height: 100vh;
     width: 100vw;
     display: flex;
-    background-image: url(../img/chickenburger.png);
+    background-image: url(../img/lechicken.png);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -265,9 +269,8 @@ html, body {
   .backSimple{
     height: 100vh;
     width: 100vw;
-    background-image: url(../img/backtelephone.png);
-  
-    display: flex;
+    background-image: url(../img/BACKTEL-BURGERSIMPLE.png);
+   display: flex;
     flex-direction: column; /* Les enfants sont disposés en colonne */
     align-items: center; /* Centre les enfants horizontalement */
     padding: 0 20px; /* Ajout de padding pour ne pas que le contenu touche les bords */
@@ -276,7 +279,7 @@ html, body {
   .backSmash {
     height: 100vh;
     width: 100vw;
-    background-image: url(../img/backtelephone.png);
+    background-image: url(../img/BACKTEL-SMASHBURGER.png);
     display: flex;
     flex-direction: column; /* Les enfants sont disposés en colonne */
     align-items: center; /* Centre les enfants horizontalement */
@@ -286,7 +289,7 @@ html, body {
   .backFish {
     height: 100vh;
     width: 100vw;
-    background-image: url(../img/backtelephone.png);
+    background-image: url(../img/BACKTEL-FISHBURGER.png);
     background-color: black;
     display: flex;
     flex-direction: column; /* Les enfants sont disposés en colonne */
@@ -297,7 +300,7 @@ html, body {
   .backChicken {
     height: 100vh;
     width: 100vw;
-    background-image: url(../img/backtelephone.png);
+    background-image: url(../img/BACKTEL-CHICKENBURGER.png);
     display: flex;
     flex-direction: column; /* Les enfants sont disposés en colonne */
     align-items: center; /* Centre les enfants horizontalement */
@@ -307,7 +310,7 @@ html, body {
   .backRoyal {
     height: 100vh;
     width: 100vw;
-    background-image: url(../img/backtelephone.png);
+    background-image: url(../img/BACKTEL-ROYALBURGER.png);
     background-color: black;
     display: flex;
     flex-direction: column; /* Les enfants sont disposés en colonne */
