--- a/Style/menu.css
+++ b/Style/menu.css
@@ -25,6 +25,7 @@
   }
   .burgerMenu {
     display: none; 
+      
   }
   .deroulant{
     text-decoration: none;
@@ -85,6 +86,11 @@
     background-color: #f1f1f1;
     color: black;
   }
+
+  .Menus{
+    color: #5A7C2A;
+    text-decoration: none;
+   }
   /* RESPONSIVE */
   /* TÉLÉPHONE */
   @media screen and (max-width: 767px) {
@@ -93,20 +99,12 @@
         height: 40px;
         display: block;
     }
-    button {
-      background: none; /* Supprime tout fond */
-      border: none; /* Supprime les bordures */
-      outline: none; /* Supprime les contours */
-      padding: 0; /* Supprime les paddings */
-      margin: 0; /* Supprime les marges */
-  }
-  
-  img {
-      background: none; /* Supprime tout fond */
-      border: none; /* Supprime les bordures */
-  }
+ .Menus{
+  color: #5A7C2A;
+  text-decoration: none;
+ }
   .navbar{
-    height: 55px;
+    height: 50px;
   }
     .navLogo img {
         width: 100%;
@@ -116,21 +114,21 @@
       transform: scale(1.08);
     }
     .burgerMenu {
-      display: block; /* Assurez-vous que le menu burger est visible sur mobile */
-      background: transparent; /* Supprime tout fond blanc */
-      border: none; /* Supprime toute bordure */
-      padding: 0; /* Supprime tout espace inutile */
-      margin: 0; /* Supprime toute marge inutile */
-  }
-  
-  .burger-menu img {
-      height: 40px;
-      width: 40px;
-      display: block; /* Affiche correctement l'image */
-      background: transparent; /* Supprime tout fond blanc */
-      border: none; /* Supprime toute bordure */
-  }
-  
+        display: block !important;
+        background: transparent; 
+       
+    }
+    .burger-menu img {
+    height: 40px;
+    width: 40px;
+    display: block; /* Ne plus le masquer */
+    background: transparent; /* Supprime tout fond indésirable */
+}
+
+    .button img{
+     background-image: url(.); 
+      
+    }
     .navMenu {
         display: none;
         flex-direction: column;
@@ -195,3 +193,180 @@
         color: black;
     }
   }
+
+  /* newwwwwwwwww */
+/* 
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    background-color: #171816ae;
+    padding: 10px;
+    position: fixed;  
+    top: 0;  
+    width: 100vw;  
+    height: 6vh; 
+    z-index: 1000;  
+  }
+  
+  .logoHome{
+    margin-left: 15px;
+  }
+  .navLogo{
+    display: none;
+  }
+  .logoHome img{
+    width: 30px;
+    height: 30px;
+  }
+  .logoHome:hover{
+    transform: scale(1.08); 
+  }
+  .burgerMenu {
+    display: none; 
+  }
+  .deroulant{
+    text-decoration: none;
+    list-style: none;
+  }
+  .navMenu {
+    flex-direction: row;
+    width: auto;
+    position: static;
+    background-color: transparent;
+    display: flex; 
+  }
+  .submenu{
+    list-style: none;
+  }
+  .navMenu li {
+    width: auto;
+    padding: 10px 15px;
+    position: relative; 
+  }
+  
+  .menuDeroulant {
+    display: none;
+    position: absolute;
+    background-color: #171816ba;
+    padding: 10px;
+    border-radius: 5px;
+    top: 100%; 
+    left: 0;
+    list-style: none; 
+    padding: 0; 
+    margin: 0; 
+  }
+  
+  .menuDeroulant li {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    list-style: none;
+  }
+  
+  .submenu:hover .menuDeroulant {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .navMenu .submenu > a {
+    color: white;
+  }
+  
+  .navMenu a, .menuDeroulant a {
+    color: white;
+    text-decoration: none;
+  }
+  
+  .navMenu a:hover, .menuDeroulant a:hover {
+    background-color: #f1f1f1;
+    color: black;
+  } */
+  /* RESPONSIVE */
+  /* TÉLÉPHONE
+  @media screen and (max-width: 767px) {
+    .navLogo {
+        width: 40px;
+        height: 40px;
+        display: block;
+    }
+  .navbar{
+    height: 50px;
+  }
+    .navLogo img {
+        width: 100%;
+        height: 100%;
+    }
+    .navLogo :hover{
+      transform: scale(1.08);
+    }
+    .burgerMenu {
+        display: none;
+       
+    }
+  
+    .navMenu {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        position: absolute;
+        top: 5vh;
+        left: 0;
+        background-color: #171816ae;
+        color: white;
+        list-style: none;
+        z-index: 999; 
+    }
+  
+    .navMenu.active {
+        display: flex;
+    }
+  
+    .menuDeroulant {
+        display: none;
+        flex-direction: column;
+        list-style: none;
+        color: white;
+       
+    }
+  
+    .submenu .menuDeroulant {
+        position: static; 
+    }
+  
+    .submenu:hover .menuDeroulant,
+    .submenu .menuDeroulant.active {
+        display: flex;
+    }
+  
+    .navMenu li {
+        width: 100%;
+        text-align: center;
+        padding: 10px;
+        color: white;
+    }
+  .logoHome{
+    display: none;
+  }
+  button.burger-menu {
+    display: block;
+  }
+    .burger-menu img {
+        height: 40px;
+        width: 40px;
+        display: none;
+        
+    }
+  
+    .navMenu a, .menuDeroulant a {
+        color: white;
+        text-decoration: none;
+        padding: 10px;
+    }
+  
+    .navMenu a:hover, .menuDeroulant a:hover {
+        background-color: #f1f1f1;
+        color: black;
+    }
+  } */
